<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_color"
    tools:context="com.example.lenovo.notekeeperapp.activities.RegistrationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="25dp">
        <TextView
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname"
            android:textColor="@color/colorAccent"
            />
        <EditText
            android:textSize="16dp"
            android:layout_marginTop="5dp"
            android:id="@+id/act_registr_edit_text_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_firstname"
            android:textColor="@color/hint_color"
            />

        <TextView
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastname"
            android:textColor="@color/colorAccent"
            />
        <EditText
            android:textSize="16dp"
            android:layout_marginTop="5dp"
            android:id="@+id/act_registr_edit_text_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_lastname"
            android:textColor="@color/hint_color"
            />
        <TextView
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorAccent"
            />
        <EditText
            android:textSize="16dp"
            android:layout_marginTop="5dp"
            android:id="@+id/act_registr_edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:textColor="@color/hint_color"
            />

        <TextView
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/colorAccent"
            />
        <EditText
            android:textSize="16dp"
            android:layout_marginTop="5dp"
            android:id="@+id/act_registr_edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_username"
            android:textColor="@color/hint_color"
            />
        <TextView
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorAccent"
            />
        <EditText
            android:textSize="16dp"
            android:layout_marginTop="5dp"
            android:id="@+id/act_registr_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textColor="@color/hint_color"
            />
        <TextView
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="@color/colorAccent"
            />
        <EditText
            android:textSize="16dp"
            android:layout_marginTop="5dp"
            android:id="@+id/act_registr_edit_text_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:textColor="@color/hint_color"
            />
        <TextView
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/colorAccent"
            />
        <LinearLayout
            android:id="@+id/act_registr_linear_layout_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

           <RadioGroup
               android:id="@+id/act_reg_gender_rg"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <RadioButton
                   android:id="@+id/act_reg_gender_rb_male"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Male"/>
               <RadioButton
                   android:id="@+id/act_reg_gender_rb_female"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Female"/>

           </RadioGroup>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColor="@color/colorAccent"
            android:textSize="16dp"
            />
        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/act_registr_edit_text_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_age"
            android:textColor="@color/hint_color"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="16dp"
            />

        <Button
            android:id="@+id/act_regist_btn_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:background="@color/colorAccent"/>
    </LinearLayout>
</ScrollView>
